# lg

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  lgCfg.c  lgCfg.h  lgCmd.c  lgDbg.c  lgDbg.h  lgErr.c  lgFile.c  lgGpio.c  lgGpio.h  lgHdl.c  lgHdl.h  lgI2C.c  lgMD5.c  lgMD5.h  lgNotify.c  lgPthAlerts.c  lgPthAlerts.h  lgPthSocket.c  lgSPI.c  lgScript.c  lgSerial.c  lgpio.3  lgpio.h  rgpio.3  rgpio.c  rgpio.h  rgpiod.1  rgpiod.h  rgs.1  rgs.c
CFG/: permits
DOC/: README  cdoc  hdoc  makedoc  pdoc
DOC/HTML/: EXAMPLES
DOC/dbase/: lg.sqlite
DOC/src/defs/: download.def  examples.def  faq.def  index.def  permits.def  rgpiod.def  rgs.def  scripts.def
EXAMPLES/lgpio/: 28BYJ_48.c  NRF24.c  bench.c  chipline.c  dhtxx.c  lg_mcp3008.h  lg_mcp4131.h  lgl_ads1x15.c  lgl_mcp3008.c  lgl_mcp3202.c  lgl_mcp4131.c  monitor.c  rotary_encoder.c  sonar_ranger.c  tx_pulse.c  tx_servo.c  tx_wave.c
EXAMPLES/py_lgpio/: 28BYJ_48.py  DHT.py  NRF24.py  bench.py  chipline.py  errors.py  lg_ads1x15.py  lg_mcp3008.py  lg_mcp3202.py  lg_mcp4131.py  lg_mcp4251.py  monitor.py  motor_sync.py  q0.py  q1.py  q2.py  rotary_encoder.py  sonar_ranger.py  testbed.py  tx_pulse.py  tx_wave.py
EXAMPLES/py_rgpio/: 28BYJ_48.py  DHT.py  DS18B20.py  NRF24.py  bench.py  chipline.py  errors.py  files.py  lg_ads1x15.py  lg_mcp3008.py  lg_mcp3202.py  lg_mcp4131.py  lg_mcp4251.py  monitor.py  motor_sync.py  rotary_encoder.py  sonar_ranger.py  testbed.py  tx_pulse.py  tx_wave.py
EXAMPLES/rgpio/: 28BYJ_48.c  DS18B20.c  NRF24.c  bench.c  chipline.c  dhtxxd.c  errors.c  files.c  lg_ads1x15.h  lg_mcp3008.h  lg_mcp3202.h  lg_mcp4131.h  lg_mcp4251.h  lgr_ads1x15.c  lgr_mcp3008.c  lgr_mcp3202.c  lgr_mcp4131.c  lgr_mcp4251.c  monitor.c  rotary_encoder.c  sonar_ranger.c  tx_pulse.c  tx_wave.c
EXAMPLES/rgs/: chipline.rgs  files
PY_LGPIO/: Makefile  README.md  lgpio.i  lgpio_extra.py  setup.py
PY_RGPIO/: Makefile  README.md  rgpio.py  setup.py
